# LightTrack-rknn

./: .gitignore  CMakeLists.txt  README.md
include/: LightTrack.h  timer.h
model/: lighttrack_backbone.precompile.rknn  lighttrack_backbone.rknn  lighttrack_init.precompile.rknn  lighttrack_init.rknn  lighttrack_neck_head.precompile.rknn  lighttrack_neck_head.rknn
src/: LightTrack.cpp  main.cpp
